
2005-10-03
	* src/*
	fixed several memleaks
	code cleanups
	
	* src/ppogl/base/error.* src/main.cpp src/gl_utils.cpp
	improved log system
	added commandline options
	
	* src/*
	add log messages to several files

2005-09-27
	* data/config.nut.in
	fixed several default settings
	
	* src/ppogl/audio/audiomgr.cpp/h
	check if audiomgr is initialized
	added possibility to disable sound and music
	
	* src/main.cpp
	fixed initialisation of AudioMgr
	
	* src/audioconfig.cpp
	fixed most problems in audioconfig (still needs some work)
	
	* src/paused.cpp
	only continue if configured pause key is pressed
	stop music playback (pausing the music is not implemented yet)
	
	* src/ppogl//audio/sound.cpp
	partially fixed handling of non endless playback

2005-09-26
	* data/translations/de_DE.nut
	fixed translations
	
=== ppracer 0.5 alpha ===

2005-09-25
	* src/videoconfig.cpp
	fixed fullscreen checkbox
	check resolution for min width/height
	check duplication of resolutions 

	* configure.in src/ppracer.h
	changed version to 0.5alpha
	
	* src/main.cpp
	fixed custom data_dir

2005-09-24  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/ui/uimgr.cpp
	fixed handling of mousewheel
		
	* src/screenshot.cpp
	save files in the right directory

2005-09-23  Volker Stroebel <volker@planetpenguin.de>
	* src/phys_sim.cpp/h src/nmrcl.cpp/
	cleanups in physical simulation and ODESolver
	removed unused solver

2005-09-22  Volker Stroebel <volker@planetpenguin.de>
	* src/tux.cpp/h src/keyframe.cpp/h
	add support for multiple models

	* src/racingmode.cpp
	draw all players in multiplayer mode

2005-09-21  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	several small fixes and code cleanups

2005-09-20  Volker Stroebel <volker@planetpenguin.de>
	* data/translations/sv_SE.nut
	updated swedish translation
	
	* src/ppogl/audio/*
	fixed compilation without SDL_mixer

2005-09-18  Volker Stroebel <volker@planetpenguin.de>
	* data/courses/* data/events/*